--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ node_js:
 
 install:
   - npm install typings -g
+  - npm install tape
   - npm install blue-tape
   - npm install rimraf
   - npm install tap-diff
