--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,6 @@ node_js:
 
 install:
   - npm install typings -g
-  - npm install tape
-  - npm install blue-tape
-  - npm install rimraf
-  - npm install tap-diff
-  - npm install ts-node
-  - npm install tslint
-  - npm install typescript  
-  - npm install through2
+  - npm install
   - typings install
     
