--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "tap-to-html",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "A Test-Anything-Protocol (tap) stream transformer to html",
   "main": "dist/index.js",
-  "typings": "dist/index",
   "files": [
     "dist/"
   ],
@@ -31,14 +30,17 @@
   },
   "homepage": "https://github.com/Quobject/tap-to-html",
   "devDependencies": {
-    "blue-tape": "^0.2.0",
-    "rimraf": "^2.5.2",
-    "tape": "^4.6.0",
-    "ts-node": "^0.7.3",
-    "tslint": "^3.10.2",
-    "typescript": "^1.8.10"
+    "blue-tape": "~1.0.0",
+    "rimraf": "^2.6.1",
+    "tape": "^4.8.0",
+    "tslint": "^5.7.0",
+    "ts-node": "^3.0.4",
+    "typescript": "^2.3.2"
   },
   "dependencies": {
-    "through2": "^2.0.1"
+    "@types/blue-tape": "^0.1.31",
+    "@types/through2": "^2.0.33",
+    "@types/node": "^7.0.18",
+    "through2": "^2.0.3"
   }
 }
